--- a/Master Project/biblio.bib
+++ b/Master Project/biblio.bib
@@ -46,4 +46,58 @@ eprint = {
         https://doi.org/10.1080/01621459.2013.824893
 }}
 
+@article{DH2,
+author = {Delaigle, A. and Hall, P.},
+title = {Approximating fragmented functional data by segments of Markov chains},
+journal = {Biometrika},
+volume = {103},
+number = {4},
+pages = {779-799},
+year = {2016},
+doi = {10.1093/biomet/asw040},
+URL = { + http://dx.doi.org/10.1093/biomet/asw040},
+eprint = {/oup/backfile/content_public/journal/biomet/103/4/10.1093_biomet_asw040/2/asw040.pdf}
+}
 
+@book{analprimer,
+  title={A Primer of Real Analytic Functions},
+  author={Krantz, S.G. and Parks, H.R.},
+  isbn={9780817642648},
+  lccn={2002021565},
+  series={A Primer of Real Analytic Functions},
+  url={https://books.google.ch/books?id=i4vw2STJl2QC},
+  year={2002},
+  publisher={Birkh{\"a}user Boston}
+}
+
+@book{prato1,
+  title={An Introduction to Infinite-Dimensional Analysis},
+  author={Da Prato, G.},
+  isbn={9783540290216},
+  lccn={2006924566},
+  series={Universitext},
+  url={https://books.google.ch/books?id=1E\_xR5m2ZZ8C},
+  year={2006},
+  publisher={Springer Berlin Heidelberg}
+}
+
+@book{prato2,
+  title={Stochastic Equations in Infinite Dimensions},
+  author={Da Prato, G. and Zabczyk, J.},
+  isbn={9780521059800},
+  lccn={93118317},
+  series={Encyclopedia of Mathematics and its Applications},
+  url={https://books.google.ch/books?id=JYiL8zz\_nC8C},
+  year={2008},
+  publisher={Cambridge University Press}
+}
+
+@book{hilb,
+  title={Introduction to Hilbert Spaces with Applications},
+  author={Debnath, L. and Mikusinski, P.},
+  isbn={9780080455921},
+  lccn={2005284016},
+  url={https://books.google.ch/books?id=ADfBjTHyDRMC},
+  year={2005},
+  publisher={Elsevier Science}
+}
