--- a/Master Project/biblio.bib
+++ b/Master Project/biblio.bib
@@ -101,3 +101,25 @@ eprint = {/oup/backfile/content_public/journal/biomet/103/4/10.1093_biomet_asw04
   year={2005},
   publisher={Elsevier Science}
 }
+
+@book{devroye,
+  title={A Probabilistic Theory of Pattern Recognition},
+  author={Devroye, L. and Gy{\"o}rfi, L. and Lugosi, G.},
+  isbn={9781461207115},
+  lccn={95044633},
+  series={Stochastic Modelling and Applied Probability},
+  url={https://books.google.ch/books?id=Y5bxBwAAQBAJ},
+  year={2013},
+  publisher={Springer New York}
+}
+
+@book{oxford,
+  title={The Oxford Handbook of Functional Data Analysis},
+  author={Ferraty, F. and Romain, Y.},
+  isbn={9780199568444},
+  lccn={2010032107},
+  series={Oxford Handbooks in Mathematics},
+  url={https://books.google.ch/books?id=21ayQCerU1IC},
+  year={2010},
+  publisher={OUP Oxford}
+}
