--- a/Master Project/biblio.bib
+++ b/Master Project/biblio.bib
@@ -12,10 +12,17 @@ keywords = {Functional data analysis, Incomplete observation, Inverse problem, P
 year = {2015},
 }
 
+@misc{Kraus2,
+Author = {David Kraus and Marco Stefanucci},
+Title = {Classification of functional fragments by regularized linear classifiers with domain selection},
+year = {2017},
+Eprint = {arXiv:1708.08257},
+}
+
 @misc{DP1,
 Author = {Marie-Hélène Descary and Victor M. Panaretos},
 Title = {Functional Data Analysis by Matrix Completion},
-Year = {2016},
+year = {2016},
 Eprint = {arXiv:1609.00834},
 }
 
@@ -58,6 +65,22 @@ doi = {10.1093/biomet/asw040},
 URL = { + http://dx.doi.org/10.1093/biomet/asw040},
 eprint = {/oup/backfile/content_public/journal/biomet/103/4/10.1093_biomet_asw040/2/asw040.pdf}
 }
+
+@article {DH3,
+author = {Delaigle, Aurore and Hall, Peter},
+title = {Achieving near perfect classification for functional data},
+journal = {Journal of the Royal Statistical Society: Series B (Statistical Methodology)},
+volume = {74},
+number = {2},
+publisher = {Blackwell Publishing Ltd},
+issn = {1467-9868},
+url = {http://dx.doi.org/10.1111/j.1467-9868.2011.01003.x},
+doi = {10.1111/j.1467-9868.2011.01003.x},
+pages = {267--286},
+keywords = {Bayes classifier, Centroid method classifier, Cross-validation, Dimension reduction, Error rate, Gaussian process, Linear model, Projection},
+year = {2012},
+}
+
 
 @book{analprimer,
   title={A Primer of Real Analytic Functions},
@@ -122,4 +145,14 @@ eprint = {/oup/backfile/content_public/journal/biomet/103/4/10.1093_biomet_asw04
   url={https://books.google.ch/books?id=21ayQCerU1IC},
   year={2010},
   publisher={OUP Oxford}
+}
+
+@book{boga,
+  title={Gaussian Measures: },
+  author={Bogachev, V.I.},
+  isbn={9781470418694},
+  series={Mathematical Surveys and Monographs},
+  url={https://books.google.ch/books?id=UtufBwAAQBAJ},
+  year={2015},
+  publisher={American Mathematical Society}
 }
